# tetris

./: .gitignore  CMakeLists.txt  main.cpp
src/figures/: CMakeLists.txt  all_figures.h  figure.cpp  figure.h  i_figure.cpp  i_figure.h  j_figure.cpp  j_figure.h  l_figure.cpp  l_figure.h  o_figure.cpp  o_figure.h  piece.cpp  piece.h  s_figure.cpp  s_figure.h  t_figure.cpp  t_figure.h  z_figure.cpp  z_figure.h
src/ui/: CMakeLists.txt  gamewindow.cpp  gamewindow.h  gamewindow.ui
